# aegistry

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
aegistry/: __init__.py  authentication_session.py  exceptions.py  logging.py  session.py
aegistry/contrib/fastapi/: __init__.py  config.py  cookies.py  dependencies.py  email_otp.py  flow.py  oauth2.py  password.py  session.py
aegistry/contrib/sqlalchemy/: __init__.py  stores.py  tables.py
aegistry/factors/: __init__.py  backup_codes.py  base.py  email_otp.py  hotp.py  password.py  totp.py
aegistry/factors/oauth2/: apple.py  base.py  github.py  google.py  line.py  oidc.py  pkce.py  state.py
clients/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
docs/: integration-plan.md
examples/: README.md
examples/server/: main.py
examples/web/: next.config.mjs  package.json
examples/web/app/: change-password-form.tsx  globals.css  layout.tsx  page.tsx  signout-button.tsx
examples/web/app/login/: page.tsx
examples/web/components/: blueprint-corner.tsx  provider-icons.tsx
examples/web/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  tabs.tsx
examples/web/lib/: auth.ts  session.ts
reauth/: __init__.py  amr.py  authentication_session.py  crypto.py  exceptions.py  logging.py  timestamp.py
reauth/factors/: __init__.py  backup_codes.py  base.py  email_otp.py  hotp.py  totp.py
reauth/factors/oauth2/: apple.py  base.py  github.py  google.py  oidc.py  state.py
tests/: conftest.py  test_authentication_session.py  test_crypto.py  test_session.py
tests/contrib/: test_fastapi_routers.py  test_sqlalchemy_stores.py
tests/factors/: test_backup_codes.py  test_email_otp.py  test_hotp.py  test_password.py  test_totp.py
tests/factors/oauth2/: conftest.py  test_base.py  test_line.py  test_oidc.py  test_pkce.py  test_state.py
