[project]
name = "aegistry"
version = "0.1.0"
authors = [{ name = "aegistry" }]
description = "Batteries-included authentication toolkit for FastAPI — a friendly fork of reauth"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "anyio",
    "cryptography>=48.0.0,<49.0.0",
    "httpx>=0.28.1",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
password = ["pwdlib[argon2]>=0.2.1"]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.30"]
fastapi = ["fastapi>=0.115.0", "email-validator>=2.0"]
all = ["aegistry[password,sqlalchemy,fastapi]"]

[project.urls]
Source = "https://github.com/primemeridiem/aegistry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegistry"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.22.1",
    "pwdlib[argon2]>=0.2.1",
    "fastapi>=0.115.0",
    "email-validator>=2.0",
    "httpx>=0.28.1",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
preview = true
extend-select = ["I", "TRY", "UP", "B904", "TRY003"]
per-file-ignores = { "tests/**" = [
    "TRY",
], "aegistry/contrib/fastapi/**" = [
    "B008", # Depends() in argument defaults is the FastAPI idiom
], "examples/**" = [
    "B008",
    "TRY003",
] }

[tool.pytest.ini_options]
addopts = "--cov=aegistry/ --cov-report=term-missing"

[tool.uv]
default-groups = ["dev"]
